--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "babel": "^6.23.0",
+    "jest": "^29.0.3",
     "parcel": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
